<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawing.DrawingAndGallery">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/color_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="fitStart"
            tools:src="@drawable/image" />

        <com.bignerdranch.android.funnydrawingapp.Drawing.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/color_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_drawing_view_container">

        <ImageButton
            android:id="@+id/skin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/skin"
            android:contentDescription="@string/skin_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:contentDescription="@string/black_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:contentDescription="@string/red_color"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:contentDescription="@string/green_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:contentDescription="@string/blue_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:contentDescription="@string/yellow_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/lollipop"
            android:contentDescription="@string/lollipop_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/random_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:contentDescription="@string/white_color"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/search"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/gallery_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/undo_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/undo_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/brush_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/brush_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/save_button"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_save" />

        <ImageButton
            android:id="@+id/switch_background_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/switch_background_button"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_switch_orange_reg" />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/reset_button"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_clear_orange_reg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>